# web-crawler

./: .gitignore  CMakeLists.txt  README.md  config.json  main.cc
controllers/: api_parse.cc  api_parse.h
postgreSQL_setup/: docker-compose.yml
test/: CMakeLists.txt  test_main.cc
utills/: ParseClient.cc  ParseClient.h  Parser.cc  Parser.h
